--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dotenv": "^17.3.1",
-    "vite": "latest"
+    "dotenv": "^17.3.1"
+  },
+  "devDependencies": {
+    "vite": "^7.3.1"
   }
 }
