--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Scrim-s02tj66",
+  "name": "restaurant-demo",
   "description": "https://scrimba.com/frontend-path-c0j/~0ie/s04o93cta0/head",
   "scripts": {
     "start": "vite",
