--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "dotenv": "^17.3.1"
+    "dotenv": "^17.3.1",
+    "firebase": "^12.9.0"
   },
   "devDependencies": {
     "vite": "^7.3.1"
